@@ -158,30 +158,6 @@ class LunaticAddControlFormatTest {
     }
 
     @Test
-    @DisplayName("Datepicker: year format control only")
-    void datepickerYearFormatControl() {
-        lunaticQuestionnaire = new Questionnaire();
-        lunaticQuestionnaire.getComponents().add(datePicker);
-        datePicker.setDateFormat("YYYY-MM-DD");
-
-        processing.apply(lunaticQuestionnaire);
-
-        List<ControlType> controls = datePicker.getControls();
-        assertEquals(1, controls.size());
-        ControlType yearControl = controls.getFirst();
-
-        assertEquals("datepicker-id-format-year", yearControl.getId());
-        String expected = "not(not(isnull(DATE_VAR)) and (" +
-                "cast(cast(cast(DATE_VAR, date, \"YYYY-MM-DD\"), string, \"YYYY\"), integer) <= 999 or " +
-                "cast(cast(cast(DATE_VAR, date, \"YYYY-MM-DD\"), string, \"YYYY\"), integer) > 9999))";
-        assertEquals(expected, yearControl.getControl().getValue());
-        assertEquals(LabelTypeEnum.VTL, yearControl.getControl().getType());
-        assertEquals(LabelTypeEnum.VTL_MD, yearControl.getErrorMessage().getType());
-        assertEquals(ControlTypeEnum.FORMAT, yearControl.getTypeOfControl());
-        assertEquals(ControlCriticalityEnum.ERROR, yearControl.getCriticality());
-    }
-
-    @Test
     @DisplayName("Datepicker: min and max format control")
     void datepickerMinMaxFormatControl() {
         lunaticQuestionnaire = new Questionnaire();
@@ -192,8 +168,8 @@ class LunaticAddControlFormatTest {
         processing.apply(lunaticQuestionnaire);
 
         List<ControlType> controls = datePicker.getControls();
-        assertEquals(2, controls.size());
-        ControlType control = controls.get(1);
+        assertEquals(1, controls.size());
+        ControlType control = controls.getFirst();
 
         assertEquals("datepicker-id-format-date-borne-inf-sup", control.getId());
         String expected = "not(not(isnull(DATE_VAR)) and " +
@@ -217,9 +193,7 @@ class LunaticAddControlFormatTest {
         datePicker.setDateFormat("YYYY-MM-DD");
         processing.apply(lunaticQuestionnaire);
 
-        // Only year format control should be present
-        assertEquals(1, datePicker.getControls().size());
-        assertNotEquals("datepicker-id-format-date-borne-sup", datePicker.getControls().getFirst().getId());
+        assertEquals(0, datePicker.getControls().size());
     }
 
     @Test
@@ -232,8 +206,8 @@ class LunaticAddControlFormatTest {
         processing.apply(lunaticQuestionnaire);
 
         List<ControlType> controls = datePicker.getControls();
-        assertEquals(2, controls.size());
-        ControlType control = controls.get(1);
+        assertEquals(1, controls.size());
+        ControlType control = controls.getFirst();
 
         assertEquals("datepicker-id-format-date-borne-inf", control.getId());
         String expected = "not(not(isnull(DATE_VAR)) and " +
@@ -268,8 +242,8 @@ class LunaticAddControlFormatTest {
         processing.apply(lunaticQuestionnaire);
 
         List<ControlType> controls = datePicker.getControls();
-        assertEquals(2, controls.size());
-        ControlType boundsControl = controls.get(1);
+        assertEquals(1, controls.size());
+        ControlType boundsControl = controls.getFirst();
 
         assertEquals("datepicker-id-format-date-borne-sup", boundsControl.getId());
         String expected = "not(not(isnull(DATE_VAR)) " +
@@ -293,11 +267,9 @@ class LunaticAddControlFormatTest {
         processing.apply(lunaticQuestionnaire);
 
         List<ControlType> controls = datePicker.getControls();
-        assertEquals(2, controls.size());
-        ControlType yearControl = controls.get(0);
-        ControlType boundsControl = controls.get(1);
+        assertEquals(1, controls.size());
+        ControlType boundsControl = controls.getFirst();
         // Only testing ids here to check that the order is right, content is tested in other tests
-        assertEquals("datepicker-id-format-year", yearControl.getId());
         assertEquals("datepicker-id-format-date-borne-sup", boundsControl.getId());
     }
 
@@ -317,7 +289,7 @@ class LunaticAddControlFormatTest {
 
         processing.apply(lunaticQuestionnaire);
 
-        assertEquals(2, datePicker.getControls().size());
+        assertEquals(1, datePicker.getControls().size());
         assertEquals(2, number.getControls().size());
     }
 
